--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -11,7 +11,7 @@
     <h1>管理コンソール</h1>
     <h2>ユーザ管理</h2>
     <ul>
-        <li><a href="/users">ユーザ管理画面へ</a></li>
+        <li><a th:href="@{/users}">ユーザ管理画面へ</a></li>
     </ul>
     <h2>ToDoリスト</h2>
     <ul th:each="u: ${uList}">
