--- a/src/main/resources/templates/userform.html
+++ b/src/main/resources/templates/userform.html
@@ -10,10 +10,10 @@
 <body>
     <h1>ユーザ登録フォーム</h1>
 
-    <form role="form" th:action="${postUrl}" th:object="${userForm}" method="post">
+    <form role="form" th:action="@{{url}(url=${postUrl})}" th:object="${userForm}" method="post">
         <table class="tabform large">
             <tr>
-                <td><label for="uid">uid (半角英数字_-・大文字は除く)： </label></td>
+                <td><label for="uid">uid (半角英数字小文字_-)： </label></td>
                 <td><input class="large" type="text" required th:field="*{uid}" />
                     <span th:if="${#fields.hasErrors('uid')}" th:errors="*{uid}" style="color: red"></span>
                 </td>
@@ -26,8 +26,8 @@
             </tr>
             <tr>
                 <td colspan="2">
-                    <input type="button" class="large simple_square_btn5" onclick="history.back()" value="戻る" />
-                    <input type="submit" class="large simple_square_btn5" value="登録する" />
+                    <input type="button" class="button large" onclick="history.back()" value="戻る" />
+                    <input type="submit" class="button" value="登録する" />
                 </td>
             </tr>
         </table>
